dist/1.0/bin/sample/retrieveUnpackaged/objects/Country_Related_Data_Type__c.object
<CustomObject>
    <description>Definitions of Data Types</description>
    <fields>
        <fullName>GTS_Location__c</fullName>
        <description>GTS Location, for which given Type can be used</description>
        <inlineHelpText>GTS Location, for which given Type can be used</inlineHelpText>
        <label>GTS Location</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Slovakia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Name of Record Type, for which given Type can be used</description>
        <inlineHelpText>Name of Record Type, for which given Type can be used</inlineHelpText>
        <label>Record Type Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_for__c</fullName>
        <description>Account Identification Type, for which given Type is Required</description>
        <inlineHelpText>Account Identification Type, for which given Type is Required</inlineHelpText>
        <label>Required for</label>
        <picklist>
            <picklistValues>
                <fullName>Civil Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Entity</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Country Related Data Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>GTS_Location__c</columns>
        <columns>Required_for__c</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Country Related Data Types</pluralLabel>
    <recordTypes>
        <fullName>Identification_Number</fullName>
        <active>true</active>
        <description>Record Type for storing Identification Numbers</description>
        <label>Identification Number</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <label>Other</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>